# animelist

./: README.it.md  README.md  pyproject.toml
MyAnimeListData/: anime_data.csv
animelist/: anime.py  animelistdata.py  common.py  main.py
animelist/MyAnimeListData/: genres_data.csv
animelist/mycommands/: addcommand.py  listcommand.py  removecommand.py  showcommand.py  updatecommand.py  watchcommand.py
