[tool.poetry]
name = "animelist"
version = "0.2.0"
description = ""
authors = ["YangLorenzo <yangrongwei2002@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
animelist = "animelist.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = { extras = ["all"], version = "^0.7.0" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
